Hello world commit

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   ],
   "author": "DayhawkM",
   "license": "UNLICENCED",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "colors": "^1.4.0"
+  }
 }
